--- a/portfolio/src/components/cursor/cursor.scss
+++ b/portfolio/src/components/cursor/cursor.scss
@@ -8,7 +8,7 @@
   position: fixed;
   z-index: 999;
 
-//   @include mobile{
-//     display: none;
-//   }
+  @include mobile{
+    display: none;
+  }
 }
