--- a/portfolio/src/components/sidebar/sidebar.scss
+++ b/portfolio/src/components/sidebar/sidebar.scss
@@ -17,9 +17,9 @@
       width: 400px;
       background: white;
   
-    //   @include mobile {
-    //     width: 200px;
-    //   }
+      @include mobile {
+        width: 200px;
+      }
   
       .links {
         position: absolute;
@@ -34,9 +34,9 @@
         a {
           font-size: 40px;
   
-        //   @include mobile {
-        //     font-size: 20px;
-        //   }
+          @include mobile {
+            font-size: 20px;
+          }
         }
       }
     }
