added styling to contact button

--- a/portfolio/src/components/hero/hero.scss
+++ b/portfolio/src/components/hero/hero.scss
@@ -53,6 +53,11 @@
           cursor: pointer;
           font-weight: 300;
         }
+
+        .contact-button {
+          background-color: white;
+          color: black;
+        }
       }
 
       img {
