--- a/portfolio/src/components/hero/hero.scss
+++ b/portfolio/src/components/hero/hero.scss
@@ -55,8 +55,10 @@
         }
 
         .contact-button {
+          position: absolute;
           background-color: white;
           color: black;
+          z-index: 999;
         }
       }
 
